--- a/contacts-app/package.json
+++ b/contacts-app/package.json
@@ -11,15 +11,15 @@
   },
   "dependencies": {
     "@prisma/client": "^3.5.0",
-    "@remix-run/react": "^1.0.0-rc.2",
-    "@remix-run/serve": "^1.0.0-rc.2",
+    "@remix-run/react": "^1.0.6",
+    "@remix-run/serve": "^1.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
-    "remix": "^1.0.0-rc.2"
+    "remix": "^1.0.6"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.0.0-rc.2",
+    "@remix-run/dev": "^1.0.6",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "prisma": "^3.5.0",
