--- a/contacts-app/package.json
+++ b/contacts-app/package.json
@@ -16,7 +16,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
-    "remix": "^1.0.6"
+    "remix": "^1.0.6",
+    "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.0.6",
