--- a/contacts-app/package.json
+++ b/contacts-app/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^3.5.0",
     "@remix-run/react": "^1.0.6",
     "@remix-run/serve": "^1.0.6",
+    "clsx": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
