--- a/contacts-app/package.json
+++ b/contacts-app/package.json
@@ -14,6 +14,7 @@
     "@remix-run/react": "^1.0.6",
     "@remix-run/serve": "^1.0.6",
     "clsx": "^1.1.1",
+    "faker": "^5.5.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^1.0.6",
+    "@types/faker": "^5.5.9",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "prisma": "^3.5.0",
