--- a/contacts-app/tsconfig.json
+++ b/contacts-app/tsconfig.json
@@ -12,6 +12,7 @@
     "paths": {
       "~/*": ["./app/*"]
     },
+    "baseUrl": ".",
 
     // Remix takes care of building everything in `remix build`.
     "noEmit": true
